Feature: formatFloat method

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "send-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
     "changelog": "chg release -y && git add -A CHANGELOG.md",
     "version": "npm-run-all changelog build",
-    "np": "npm run build && np",
-    "bench": "npm run build && grunion ./benchmark/*.js"
+    "np": "npm run build && np"
   },
   "engines": {
     "node": ">=4"
