--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "unit": "npm run build && nyc ava ./dist/*.spec.js",
     "check-coverage": "nyc check-coverage --lines 100 --functions 100 --branches 100",
     "test": "npm-run-all lint unit check-coverage",
-    "watch": "npm run build && concurrently -r --kill-others 'npm run --silent build -- -w' 'sleepms 2000 && ava ./dist/main/*.spec.js --watch'",
+    "watch": "npm run build && concurrently -r --kill-others 'npm run --silent build -- -w' 'sleepms 2000 && ava ./dist/*.spec.js --watch'",
     "cov": "npm-run-all unit html-coverage && opn coverage/index.html",
     "html-coverage": "nyc report --reporter=html",
     "send-coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
@@ -39,9 +39,11 @@
     "ava": "^0.19.0",
     "chg": "^0.3.2",
     "codecov": "^2.0.1",
+    "concurrently": "^3.5.0",
     "np": "^2.16.0",
     "npm-run-all": "^4.0.2",
     "nyc": "^10.2.0",
+    "sleep-ms": "^2.0.1",
     "tslint": "^5.0.0",
     "tslint-config-swimlane": "^3.0.2",
     "typescript": "^2.2.2"
